@@ -46,6 +46,7 @@ AC_OUTPUT([
 	data/icons/24x24/Makefile
 	data/icons/32x32/Makefile
 	data/icons/48x48/Makefile
+	data/mime/Makefile
 	data/ui/Makefile
 	src/Makefile
 	src/lib/Makefile
