@@ -1,4 +1,4 @@
-SUBDIRS		= icons ui
+SUBDIRS		= icons mime ui
 
 desktopdir	= $(datadir)/applications
 desktop_DATA	= revelation.desktop
@@ -6,7 +6,7 @@ desktop_DATA	= revelation.desktop
 schemadir	= @GCONF_SCHEMA_FILE_DIR@
 schema_DATA	= revelation.schemas
 
-install-schemas:
+install-data-hook:
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
 	$(GCONFTOOL) --makefile-install-rule $(schema_DATA)
 
