@@ -1,3 +1,6 @@
 appicondir	= $(datadir)/icons/hicolor/48x48/apps
 appicon_DATA	= revelation.png
 
+mimeicondir	= $(datadir)/icons/hicolor/mimetype
+mimeicon_DATA	= gnome-mime-application-x-revelation.png
+
