@@ -1,0 +1,6 @@
+mimedir		= $(datadir)/mime/packages
+mime_DATA	= revelation.xml
+
+install-data-hook:
+	update-mime-database $(datadir)/mime
+
