@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>
+	<mime-type type="application/x-revelation">
+		<comment>Revelation password database</comment>
+
+		<magic>
+			<match type="string" offset="0" value="rvl\0">
+				<match type="string" offset="5" value="\0">
+					<match type="string" offset="8" value="\0\0\0" />
+				</match>
+			</match>
+		</magic>
+	</mime-type>
+</mime-info>
+
