@@ -9,4 +9,5 @@ Terminal=false
 Type=Application
 Categories=GNOME;Application;Office;
 StartupNotify=true
+MimeType=application/x-revelation
 
